crates/toml/tests/snapshots/invalid/string/bad-hex-esc-05.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-5 = "\x 50"
  |                    ^
too few unicode value digits, expected unicode hexadecimal value
